# felix

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
packaging/: felix.desktop
packaging/appimage/: AppRun  build-appimage.sh
src/: main.rs  viewers.rs
src/archive/: virtual_fs.rs
src/config/: mod.rs
src/fs/: browser.rs  mod.rs  operations.rs
src/search/: content.rs  filename.rs  mod.rs
src/tools/: manager.rs  mod.rs
src/tools/docx/: mod.rs
src/tools/markdown/: mod.rs
src/tools/pdf/: mod.rs
src/tools/pptx/: mod.rs
src/ui/: window.rs
src/viewer/: pdf.rs
thoughts/ledgers/: CONTINUITY_ses_2b3b.md
ui/: main.slint
